# chatbot-web-socket

./: .gitignore  README.md  bld_prepared.jsonl  manage.py  pyproject.toml
chat/: admin.py  models.py  routing.py  serializers.py  views.py
templates/: base.html
templates/chat/: chat.html
testopenAI/: asgi.py  settings.py  urls.py  wsgi.py
